--- a/example/public/manifest.json
+++ b/example/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "simple-table",
-  "name": "simple-table",
+  "short_name": "react-simple-table-devc",
+  "name": "react-simple-table-devc",
   "icons": [
     {
       "src": "favicon.ico",
